<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryScreen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:src="@drawable/tag_image"
            tools:srcCompat="@drawable/tag_image" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <Button
                android:id="@+id/joingame"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/gamejoin"
                android:textColor="@color/colorAccent"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold|italic"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/startgame"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text ="@string/gamecreate"
                android:textColor="@color/colorAccent"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold|italic"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/invitations"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/invites"
                android:textColor="@color/colorAccent"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold|italic"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/tutorials"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/tutorials"
                android:textColor="@color/colorAccent"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold|italic"
                android:background="@color/colorPrimary"/>



        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>