<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_log">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="@string/signin"
            android:textColor="@color/whiteAccent"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold|italic"
            android:textSize="30dp"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/signout"
            android:textSize="30dp"
            android:textColor="@color/whiteAccent"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold|italic"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@color/whiteAccent"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold|italic"
            android:textSize="30dp"
            android:background="@color/colorAccent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>